--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,15 +18,13 @@ jobs:
     strategy:
       matrix:
         image:
-          - aurora
-
-        suffix:
-          - -dx-nvidia
-          - -dx
+          - aurora-dx-nvidia:latest
+          - aurora-dx:latest
+          - ucore-hci:stable-zfs
 
     env:
-      MY_IMAGE_NAME: "${{ matrix.image }}${{ matrix.suffix }}" # the name of the image produced by this build, matches repo names
-      MY_IMAGE_DESC: "My customised ${{ matrix.image }} image (${{ matrix.suffix }})"
+      MY_IMAGE_NAME: "${{ matrix.image }}" # the name of the image produced by this build, matches repo names
+      MY_IMAGE_DESC: "My customised ${{ matrix.image }} image"
       IMAGE_REGISTRY: "ghcr.io/${{ github.repository_owner }}" # do not edit
 
     name: Build and push image
@@ -111,7 +109,6 @@ jobs:
           oci: false
           build-args: |
             SOURCE_IMAGE=${{ matrix.image }}
-            SOURCE_SUFFIX=${{ matrix.suffix }}
 
       # Workaround bug where capital letters in your GitHub username make it impossible to push to GHCR.
       # https://github.com/macbre/push-to-ghcr/issues/12
