--- a/.github/workflows/bluebuild.yml
+++ b/.github/workflows/bluebuild.yml
@@ -30,6 +30,7 @@ jobs:
         recipe:
           # !! Add your recipes here
           - desktop.yml
+          - desktop-nvidia.yml
 
     steps:
       # the build is fully handled by the reusable github action
