--- a/recipes/server.yml
+++ b/recipes/server.yml
@@ -1,20 +1,17 @@
 # image will be published to ghcr.io/<user>/<name>
-name: aurora-dx
+name: ucore-hci
 # description will be included in the image's metadata
-description: This is my personal OS image with nouveau.
+description: This is my personal OS image for my servers.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/aurora-dx
-image-version: latest # latest is also supported if you want new updates ASAP
+base-image: ghcr.io/ublue-os/ucore-hci
+image-version: stable-zfs # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
   - from-file: shared/rootfs-files.yml
 
-  - from-file: shared/desktop-rpms.yml
   - from-file: shared/cli-tools.yml
-
-  - from-file: shared/desktop-flatpaks.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
