--- a/.github/workflows/bluebuild.yml
+++ b/.github/workflows/bluebuild.yml
@@ -28,20 +28,52 @@ jobs:
 
       matrix:
         recipe:
-          - desktop.yml
-          - desktop-nvidia.yml
-          - server.yml
-          - server-nvidia.yml
+          - desktop
+          - desktop-nvidia
+          - server
+          - server-nvidia
+
+        arch:
+          - x86_64
+
+        version:
+          - 40
 
     steps:
       # the build is fully handled by the reusable github action
       - name: Build Custom Image
         uses: blue-build/github-action@v1.6
         with:
-          recipe: ${{ matrix.recipe }}
+          recipe: ${{ matrix.recipe }}.yml
           cosign_private_key: ${{ secrets.SIGNING_SECRET }}
           registry_token: ${{ github.token }}
           pr_event_number: ${{ github.event.number }}
 
           # enabled by default, disable if your image is small and you want faster builds
-          maximize_build_space: false
+          maximize_build_space: true
+
+      - name: Build ISO
+        uses: jasonn3/build-container-installer@main
+        id: build
+        with:
+          arch: ${{ matrix.arch }}
+          enrollment_password: ${{ secrets.ENROLLMENT_PASSWORD }}
+          image_name: aurora-dx
+          image_repo: ghcr.io/decentm
+          image_tag: latest
+          version: 40
+          variant: fedora-release-kinoite-40-38.noarch
+          iso_name: aurora-dx-latest-${{ matrix.version }}.iso
+
+      # This example is for uploading your ISO as a Github artifact. You can do something similar using any cloud storage, so long as you copy the output
+      - name: Upload ISO as artifact
+        id: upload
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ steps.build.outputs.iso_name }}
+          path: |
+            ${{ steps.build.outputs.iso_path }}
+            ${{ steps.build.outputs.iso_path }}-CHECKSUM
+          if-no-files-found: error
+          retention-days: 0
+          compression-level: 9
