--- a/recipes/desktop-nvidia.yml
+++ b/recipes/desktop-nvidia.yml
@@ -14,7 +14,7 @@ modules:
   - from-file: shared/cli-tools.yml
 
   - from-file: shared/desktop-flatpaks.yml
-
-  - from-file: shared/rootfs-files.yml
+  - from-file: shared/dotfiles.yml
+  - from-file: shared/libvirt-hooks.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
