--- a/recipes/server.yml
+++ b/recipes/server.yml
@@ -13,4 +13,6 @@ modules:
   - from-file: shared/cli-tools.yml
   - from-file: shared/rootfs-files.yml
 
+  - from-file: shared/dotfiles.yml
+
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
