--- a/recipes/workstation-nvidia.yml
+++ b/recipes/workstation-nvidia.yml
@@ -1,5 +1,5 @@
 # image will be published to ghcr.io/<user>/<name>
-name: aurora-dx-nvidia
+name: workstation-nvidia
 # description will be included in the image's metadata
 description: This is my personal OS image with Nvidia blobs.
 
