fix: use separate cleanup for hardened

--- a/recipes/workstation-nvidia.yml
+++ b/recipes/workstation-nvidia.yml
@@ -10,6 +10,8 @@ image-version: latest # latest is also supported if you want new updates ASAP
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
+  - from-file: shared/cleanup/aurora-dx.yml
+
   - from-file: shared/desktop-rpms.yml
   - from-file: shared/cli-tools.yml
 
