--- a/recipes/k8s-node.yml
+++ b/recipes/k8s-node.yml
@@ -10,7 +10,7 @@ image-version: stable-zfs # latest is also supported if you want new updates ASA
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  - from-file: shared/cli-tools.yml
+  - from-file: shared/tools/general-cli.yml
   - from-file: shared/dotfiles.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
