--- a/recipes/shared/tools/general-cli.yml
+++ b/recipes/shared/tools/general-cli.yml
@@ -4,8 +4,6 @@ repos:
   # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
 
 install:
-  # - micro
-  # - starship
-  - sshpass
-  - java-latest-openjdk
-  - zoxide
+  - screen
+  - iftop
+  - mosh
