--- a/recipes/shared/flatpaks.yml
+++ b/recipes/shared/flatpaks.yml
@@ -2,11 +2,12 @@ type: default-flatpaks
 
 notify: true # Send notification after install/uninstall is finished (true/false)
 
-system:
+user:
   # If no repo information is specified, Flathub will be used by default
-  # repo-url: https://dl.flathub.org/repo/flathub.flatpakrepo
-  # repo-name: flathub
-  # repo-title: "Flathub (system-wide)" # Optional; this sets the remote's user-facing name in graphical frontends like GNOME Software
+  repo-url: https://dl.flathub.org/repo/flathub.flatpakrepo
+  repo-name: flathub
+  repo-title: "Flathub (user)" # Optional; this sets the remote's user-facing name in graphical frontends like GNOME Software
+
   install:
     # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
     - app.organicmaps.desktop
