--- a/recipes/laptop.yml
+++ b/recipes/laptop.yml
@@ -1,31 +1,30 @@
 # image will be published to ghcr.io/<user>/<name>
-name: workstation-hardened
+name: laptop
 # description will be included in the image's metadata
-description: This is my personal OS image with nouveau (testing hardened version from Secureblue).
+description: This is my personal OS image for Laptops with nouveau.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/secureblue/aurora-main-hardened
+base-image: ghcr.io/ublue-os/aurora-dx
 image-version: latest # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
   # Cleanup
-  - from-file: shared/cleanup/aurora-hardened.yml
+  - from-file: shared/cleanup/aurora-dx.yml
   - from-file: shared/cleanup/aurora-flatpaks.yml
 
   # Tools
   - from-file: shared/tools/dotfiles-dependencies.yml
   - from-file: shared/tools/general-cli.yml
+  - from-file: shared/tools/laptop-cli.yml
 
   # Software
   - from-file: shared/flatpaks/integrated.yml
-  - from-file: shared/flatpaks/video-prod.yml
   - from-file: shared/flatpaks/thirdparty.yml
   - from-file: shared/flatpaks/work.yml
 
   # Files
   - from-file: shared/dotfiles.yml
-  - from-file: shared/libvirt-hooks.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
