--- a/recipes/shared/flatpaks/video-prod.yml
+++ b/recipes/shared/flatpaks/video-prod.yml
@@ -2,11 +2,8 @@ type: default-flatpaks
 
 notify: true # Send notification after install/uninstall is finished (true/false)
 
-user:
+system:
   # If no repo information is specified, Flathub will be used by default
-  repo-url: https://dl.flathub.org/repo/flathub.flatpakrepo
-  repo-name: flathub
-  repo-title: "Flathub (user)" # Optional; this sets the remote's user-facing name in graphical frontends like GNOME Software
 
   install:
     - com.obsproject.Studio
