fix: new installer has no option not to create a user

--- a/.github/workflows/bluebuild.yml
+++ b/.github/workflows/bluebuild.yml
@@ -83,7 +83,7 @@ jobs:
           version: ${{ matrix.version }}
           iso_name: ${{ matrix.recipe }}-latest-${{ matrix.arch }}.iso
           variant: ${{ matrix.variant }}
-          web_ui: true
+          web_ui: false
 
       # This example is for uploading your ISO as a Github artifact. You can do something similar using any cloud storage, so long as you copy the output
       - name: Upload ISO as artifact
