--- a/recipes/k8s-node.yml
+++ b/recipes/k8s-node.yml
@@ -13,4 +13,7 @@ modules:
   - from-file: shared/tools/general-cli.yml
   - from-file: shared/dotfiles.yml
 
+  - from-file: shared/k8s/cli-tools.yml
+  - from-file: shared/k8s/services.yml
+
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
