--- a/recipes/shared/k8s/disable-selinux.yml
+++ b/recipes/shared/k8s/disable-selinux.yml
@@ -1,5 +1,8 @@
-type: script
-
-snippets:
-  - setenforce 0
-  - sed -i 's/^SELINUX=enforcing$/SELINUX=disabled/' /etc/selinux/config
+type: files
+files:
+  - source: disable-selinux
+    destination:
+      / # copies files/system/* (* means everything inside it) into your image's root folder /
+      # put configuration files you want in /usr/etc/ inside the image
+      # while putting files in /etc/ is done on booted system by system administrators.
+      # read more about this in files module reference.
