--- a/recipes/shared/k8s/disable-selinux.yml
+++ b/recipes/shared/k8s/disable-selinux.yml
@@ -1,8 +1,5 @@
 type: files
+
 files:
   - source: disable-selinux
-    destination:
-      / # copies files/system/* (* means everything inside it) into your image's root folder /
-      # put configuration files you want in /usr/etc/ inside the image
-      # while putting files in /etc/ is done on booted system by system administrators.
-      # read more about this in files module reference.
+    destination: /
