--- a/recipes/shared/k8s/kubernetes-repo.yml
+++ b/recipes/shared/k8s/kubernetes-repo.yml
@@ -1,13 +1,5 @@
-type: script
+type: files
 
-snippets:
-  - |
-    sudo tee /etc/yum.repos.d/kubernetes.repo <<- EOF > /dev/null
-      [kubernetes]
-      name=Kubernetes
-      baseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el9-\$basearch
-      enabled=1
-      gpgcheck=1
-      repo_gpgcheck=1
-      gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-    EOF
+files:
+  - source: kubernetes-repo
+    destination: /
