--- a/recipes/components/cockpit.yml
+++ b/recipes/components/cockpit.yml
@@ -10,6 +10,8 @@ modules:
   # cockpit-file-sharing
   # cockpit-zfs-manager
   - type: rpm-ostree
+    repos:
+      - https://copr.fedorainfracloud.org/coprs/spike/znapzend/repo/fedora-40/spike-znapzend-fedora-40.repo
     install:
       - https://github.com/45Drives/cockpit-file-sharing/releases/download/v4.2.1/cockpit-file-sharing-4.2.1-1.el8.noarch.rpm
       - https://github.com/45Drives/cockpit-zfs-manager/releases/download/v1.3.1/cockpit-zfs-manager-1.3.1-1.el8.noarch.rpm
