--- a/recipes/components/cockpit.yml
+++ b/recipes/components/cockpit.yml
@@ -6,15 +6,32 @@ modules:
       - cockpit-machines
       - cockpit-ostree
       - cockpit-navigator
+      # for cockpit-sensors
+      - lm_sensors
+      # for cockpit-file-sharing
+      - samba-common-tools
+      - samba-winbind-clients
 
-  # cockpit-file-sharing
-  # cockpit-zfs-manager
   - type: rpm-ostree
     repos:
       - https://copr.fedorainfracloud.org/coprs/spike/znapzend/repo/fedora-40/spike-znapzend-fedora-40.repo
     install:
+      # for cockpit-zfs-manager
+      - znapzend
+
+  # cockpit-file-sharing
+  # cockpit-identities
+  - type: rpm-ostree
+    install:
       - https://github.com/45Drives/cockpit-file-sharing/releases/download/v4.2.1/cockpit-file-sharing-4.2.1-1.el8.noarch.rpm
-      - https://github.com/45Drives/cockpit-zfs-manager/releases/download/v1.3.1/cockpit-zfs-manager-1.3.1-1.el8.noarch.rpm
+
+  # cockpit-zfs-manager
+  - type: script
+    scripts: []
+    snippets:
+      - "git clone https://github.com/45drives/cockpit-zfs-manager.git"
+      - "cp -r cockpit-zfs-manager/zfs /usr/share/cockpit"
+      - "rm -r cockpit-zfs-manager"
 
   # cockpit-sensors
   - type: script
@@ -29,4 +46,4 @@ modules:
   - type: systemd
     system:
       enabled:
-        - cockpit
+        - cockpit.socket
