feat: install htop and vim, remove nano

--- a/recipes/cleanup/aurora-dx.yml
+++ b/recipes/cleanup/aurora-dx.yml
@@ -12,6 +12,8 @@ modules:
       - podman-compose
       - podman-tui
       - podmansh
+      - podman
+      - nano
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
