fix: remove nano-default-editor also

--- a/recipes/cleanup/aurora-dx.yml
+++ b/recipes/cleanup/aurora-dx.yml
@@ -14,6 +14,7 @@ modules:
       - podmansh
       - podman
       - nano
+      - nano-default-editor
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
