fix: don't remove podman from desktop, do remove it from ucore

--- a/recipes/cleanup/ucore.yml
+++ b/recipes/cleanup/ucore.yml
@@ -5,3 +5,8 @@ modules:
       - coreos-installer-bootinfra
       - nano
       - nano-default-editor
+      - podman
+      - podman-compose
+      - bootc
+      - cockpit-podman
+      - toolbox
