fix: add hugepage for longhorn

--- a/recipes/features/dotfiles.yml
+++ b/recipes/features/dotfiles.yml
@@ -7,5 +7,11 @@ modules:
 
   - type: rpm-ostree
     install:
+      - zsh
       - sshpass
       - zoxide
+
+  # TODO: setup zsh as default shell
+  - type: script
+    scripts: []
+    snippets: []
