--- a/.github/workflows/bluebuild.yml
+++ b/.github/workflows/bluebuild.yml
@@ -38,11 +38,6 @@ jobs:
             variant: fedora-release-kinoite-40-38.noarch
             version: 40
 
-          - recipe: workstation-hardened
-            arch: x86_64
-            variant: fedora-release-kinoite-40-38.noarch
-            version: 40
-
           - recipe: laptop
             arch: x86_64
             variant: fedora-release-kinoite-40-38.noarch
@@ -54,6 +49,11 @@ jobs:
             version: 40
 
           - recipe: k8s-node-nvidia
+            arch: x86_64
+            variant: fedora-release-coreos-40-38.noarch
+            version: 40
+
+          - recipe: k8s-node-legacy-nvidia
             arch: x86_64
             variant: fedora-release-coreos-40-38.noarch
             version: 40
