build: take legacy nvidia out of the matrix for now
[ci skip]

--- a/.github/workflows/bluebuild.yml
+++ b/.github/workflows/bluebuild.yml
@@ -53,10 +53,10 @@ jobs:
             variant: fedora-release-coreos-40-38.noarch
             version: 40
 
-          - recipe: k8s-node-legacy-nvidia
-            arch: x86_64
-            variant: fedora-release-coreos-40-38.noarch
-            version: 40
+          # - recipe: k8s-node-legacy-nvidia
+          #   arch: x86_64
+          #   variant: fedora-release-coreos-40-38.noarch
+          #   version: 40
 
     steps:
       # the build is fully handled by the reusable github action
