--- a/recipes/k8s-node-legacy-nvidia.yml
+++ b/recipes/k8s-node-legacy-nvidia.yml
@@ -19,6 +19,8 @@ modules:
 
   - from-file: components/legacy-nvidia.yml
   - from-file: components/kubernetes.yml
+  - from-file: features/nvidia-container-toolkit.yml
+
   - from-file: components/cockpit.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
