fix: make the nvidia runtime be the default one on nodes

--- a/recipes/features/nvidia-container-toolkit.yml
+++ b/recipes/features/nvidia-container-toolkit.yml
@@ -8,4 +8,4 @@ modules:
   - type: script
     scripts: []
     snippets:
-      - "nvidia-ctk runtime configure --runtime=crio"
+      - "nvidia-ctk runtime configure --runtime=crio --set-as-default"
