--- a/recipes/k8s-node-nvidia.yml
+++ b/recipes/k8s-node-nvidia.yml
@@ -18,6 +18,7 @@ modules:
   - from-file: features/sshable.yml
 
   - from-file: components/kubernetes.yml
+  - from-file: components/nvidia-container-toolkit.yml
   - from-file: components/cockpit.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
