--- a/recipes/k8s-node-legacy-nvidia.yml
+++ b/recipes/k8s-node-legacy-nvidia.yml
@@ -16,6 +16,7 @@ modules:
 
   - from-file: features/dotfiles.yml
   - from-file: features/sshable.yml
+  - from-file: features/no-suspend.yml
 
   - from-file: components/legacy-nvidia.yml
   - from-file: components/kubernetes.yml
