--- a/recipes/k8s-node-hci-zfs-nvidia.yml
+++ b/recipes/k8s-node-hci-zfs-nvidia.yml
@@ -1,16 +1,19 @@
 # image will be published to ghcr.io/<user>/<name>
-name: k8s-node-legacy-nvidia
+name: k8s-node-hci-zfs-nvidia
 # description will be included in the image's metadata
 description: This is my personal OS image for nodes in my k8s cluster with Nvidia blobs.
 
 # the base image to build on top of (FROM) and the version tag to use
 base-image: ghcr.io/ublue-os/ucore-hci
-image-version: stable-zfs # latest is also supported if you want new updates ASAP
+image-version: stable-nvidia-zfs # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
   - from-file: cleanup/ucore.yml
+  - from-file: cleanup/podman.yml
+  - from-file: cleanup/nano.yml
+  - from-file: cleanup/coreos-installer.yml
 
   - from-file: tools/general.yml
 
@@ -18,9 +21,10 @@ modules:
   - from-file: features/sshable.yml
   - from-file: features/no-suspend.yml
 
-  - from-file: components/legacy-nvidia.yml
   - from-file: components/kubernetes.yml
   - from-file: components/nvidia-container-toolkit.yml
   - from-file: components/cockpit.yml
+  - from-file: components/cockpit-zfs.yml
+  - from-file: components/cockpit-hci.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
